remove quantity from inventory link as stoichiometryMol.actualAmount is used for deductions. Manage adding and deleting links via main /stoichiometry endpoints now that model is simplified.
