# src/main/java/com/researchspace/api/v1/model/stoichiometry/StoichiometryInventoryLinkRequest.java
@@ -1,6 +1,5 @@
 package com.researchspace.api.v1.model.stoichiometry;
 
-import java.math.BigDecimal;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -12,7 +11,4 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor
 public class StoichiometryInventoryLinkRequest {
   private String inventoryItemGlobalId;
-  private Long stoichiometryMoleculeId;
-  private BigDecimal quantity;
-  private Integer unitId;
 }
